[tool.poetry]
name = "binarydatadecoder"
version = "0.1.0"
description = ""
authors = ["Martin <m.starman@live.comdd>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
